opensubdiv crash in rendered viewport #62408

Closed
opened 2019-03-10 03:41:51 +01:00 by Richard J Walker · 13 comments

System Information
Operating system: Mageia Cauldron (Mageia 7)
Graphics card: Display on AMD A10-Kaveri with amdgpu kernel driver and radeonsi Mesa
CUDA Render on Nvidia GTX1050Ti

Blender Version
Broken:Blender 2.79 (sub 6), Commit date: 2019-01-09 22:04, Hash 5100e4419e
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional) blender-2.79b-linux-glibc219-x86_64/2.79 Hash f4dc9f9d68
and
blender-2.79-e6acb4fba094-linux-glibc224-x86_64 2019-01-04 11:41 Hash e6acb4fba0

Short description of error
Selecting Display rendered preview in 3D View window causes immediate crash if Experimental, Adaptive Subdivision modifier is used on model.lores-torus-tyre-crashtest.blend
Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

With attached file, using any Blender 2.79 released after 2019-01-10, using CPU or GPU rendering, change the 3D View window to display as rendered.

**System Information** Operating system: Mageia Cauldron (Mageia 7) Graphics card: Display on AMD A10-Kaveri with amdgpu kernel driver and radeonsi Mesa CUDA Render on Nvidia GTX1050Ti **Blender Version** Broken:Blender 2.79 (sub 6), Commit date: 2019-01-09 22:04, Hash 5100e4419eb1 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) blender-2.79b-linux-glibc219-x86_64/2.79 Hash f4dc9f9d68b and blender-2.79-e6acb4fba094-linux-glibc224-x86_64 2019-01-04 11:41 Hash e6acb4fba094 **Short description of error** Selecting Display rendered preview in 3D View window causes immediate crash if Experimental, Adaptive Subdivision modifier is used on model.[lores-torus-tyre-crashtest.blend](https://archive.blender.org/developer/F6792884/lores-torus-tyre-crashtest.blend) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). With attached file, using any Blender 2.79 released after 2019-01-10, using CPU or GPU rendering, change the 3D View window to display as rendered.

Added subscriber: @jaywalker

Added subscriber: @jaywalker

Added subscriber: @GavinScott

Added subscriber: @GavinScott

It renders for me OK the first time, but if I toggle back and forth between rendered and lookdev modes it locks up in a memory allocation loop.

I suspect this is the same issue as in my https://developer.blender.org/T60379 which still needs some developer TLC (hint, hint, wink, wink, nudge, nudge).

It renders for me OK the first time, but if I toggle back and forth between rendered and lookdev modes it locks up in a memory allocation loop. I suspect this is the same issue as in my https://developer.blender.org/T60379 which still needs some developer TLC (hint, hint, wink, wink, nudge, nudge).

Hi Gavin, your memory allocation loop sounds familiar. I have seen it in 2.79 also. It happens when I load either your disptest.blend or the test file above into yesterday's 2.80, but 2.80 does not crash.

2.79 does, with opensubdiv 3.3.3, and doesn't crash if compiled without osd support, or if Experimental features are disabled in the render settings, so no adaptive subdivision.

Hi Gavin, your memory allocation loop sounds familiar. I have seen it in 2.79 also. It happens when I load either your disptest.blend or the test file above into yesterday's 2.80, but 2.80 does not crash. 2.79 does, with opensubdiv 3.3.3, and doesn't crash if compiled without osd support, or if Experimental features are disabled in the render settings, so no adaptive subdivision.

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB

I can not reproduce this crash with my 2.79 build (with opensubdiv 3.3.3). And as you stated, I can not reproduce the crash either in 2.8.

@Sergey can you reproduce this on 2.79?

I can not reproduce this crash with my 2.79 build (with opensubdiv 3.3.3). And as you stated, I can not reproduce the crash either in 2.8. @Sergey can you reproduce this on 2.79?

This does happen with own builds of blender2.7 and master branch, and with builds from buildbot.

This does happen with own builds of blender2.7 and master branch, and with builds from buildbot.
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-11 15:24:47 +01:00
Sergey Sharybin removed their assignment 2019-03-11 15:28:25 +01:00
Brecht Van Lommel was assigned by Sergey Sharybin 2019-03-11 15:28:25 +01:00

Think you're more familiar with the opensubdiv code in Cycles.
If it's not Cycles specific, please bounce back.

Think you're more familiar with the opensubdiv code in Cycles. If it's not Cycles specific, please bounce back.

As with my #60379 I presume that adaptive subdiv is complex in that the adaptive tessellation needs to be successfully recomputed basically whenever anything affecting the view or the subdiv modifier or the associated scene parameters change, and there are one or more issues with this, either dependency handling, or simply managing the reset of the adaptive tessellation stuff when things change and/or making sure that the computation has completed successfully before trying to do things based on that.

As with my #60379 I presume that adaptive subdiv is complex in that the adaptive tessellation needs to be successfully recomputed basically whenever anything affecting the view or the subdiv modifier or the associated scene parameters change, and there are one or more issues with this, either dependency handling, or simply managing the reset of the adaptive tessellation stuff when things change and/or making sure that the computation has completed successfully before trying to do things based on that.

This issue was referenced by blender/cycles@43894c48cc

This issue was referenced by blender/cycles@43894c48cc5beed5c47d0cd22b4eba7cbf872ecd

This issue was referenced by 8982f0cfee

This issue was referenced by 8982f0cfee417f3cc9612666db1eac4f3e965de9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks for the fix, Brecht. I completed a Blender RPM rebuild yesterday using all system libraries, so some versions differ from the Blender.org dailies. In particular I have LLVM 8.0 and OSL 1.11.0 but essentially my OSD version is still 3.3.3.

I can confirm that this fix cures my problem of the Blender crash when rendering in the viewport models using adaptive subdivision .

Richard

Thanks for the fix, Brecht. I completed a Blender RPM rebuild yesterday using all system libraries, so some versions differ from the Blender.org dailies. In particular I have LLVM 8.0 and OSL 1.11.0 but essentially my OSD version is still 3.3.3. I can confirm that this fix cures my problem of the Blender crash when rendering in the viewport models using adaptive subdivision . Richard
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62408
No description provided.