Fix T62408: Cycles viewport adaptive subdivision hangs after updates

Backporting fix from the master branch.